# jusiai-assistant

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  lv_conf.h  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts
app/src/androidTest/java/com/jusiai/assistant/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jusiai/assistant/: AssistantApp.kt  MainActivity.kt
app/src/main/java/com/jusiai/assistant/data/api/: ApiClient.kt  AuthApi.kt
app/src/main/java/com/jusiai/assistant/data/api/dto/: ApiErrorBody.kt  OtpDtos.kt
app/src/main/java/com/jusiai/assistant/data/auth/: AuthInterceptor.kt  SessionExpiredInterceptor.kt  SessionState.kt  TokenStore.kt
app/src/main/java/com/jusiai/assistant/data/repository/: AuthRepository.kt
app/src/main/java/com/jusiai/assistant/feature/aicall/data/: AiAgentApi.kt  AiAgentRepository.kt  AiCallPreferences.kt  AiRoomRepository.kt  RoomApi.kt
app/src/main/java/com/jusiai/assistant/feature/aicall/model/: AiCallDtos.kt  AiCallState.kt
app/src/main/java/com/jusiai/assistant/feature/aicall/ui/: AiCallScreen.kt  VoicePickerSheet.kt
app/src/main/java/com/jusiai/assistant/feature/aicall/ui/components/: AnimatedSphere.kt  BottomControls.kt  VideoPreview.kt
app/src/main/java/com/jusiai/assistant/feature/aicall/vm/: AiCallViewModel.kt
app/src/main/java/com/jusiai/assistant/ui/login/: LoginScreen.kt  LoginViewModel.kt
app/src/main/java/com/jusiai/assistant/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/jusiai/assistant/util/: ErrorTranslator.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/jusiai/assistant/: ExampleUnitTest.kt
assets/fonts/: lv_font_zh_14.c  lv_font_zh_16.c  lv_font_zh_20.c
cmake/: LiveKitConfig.cmake.in  json.cmake  lvgl.cmake
config/: jusiai-assistant.conf
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
src/: app_config.cpp  app_config.h  i18n.cpp  i18n.h  log.h  main.cpp
src/api/: api_types.h  device_api_client.cpp  device_api_client.h
src/control/: control_server.cpp  control_server.h
src/core/: assistant_controller.cpp  assistant_controller.h
src/media/: alsa_setup.c  alsa_setup.h  audio_io.cpp  audio_io.h  camera_io.cpp  camera_io.h  frame_buffer.h
src/rtc/: livekit_session.cpp  livekit_session.h
src/ui/: lv_display.cpp  lv_display.h  ui_app.cpp  ui_app.h  ui_fonts.h
tools/: alsadiag.c  fdtest.c  gen_zh_font.js
